# simple-blockchain

./: .gitignore  Cargo.toml  blockchain.txt  keypair
src/: blockchain.rs  entities.rs  keypair  main.rs  node.rs  routes.rs  utils.rs  verification.rs  wallet.rs
