[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
base16ct = {version = "0.1", features = ["alloc"]}
openssl = "0.10"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

