[package]
name = "simple-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
base16ct = {version = "0.1", features = ["alloc"]}
openssl = "0.10"
actix-web = "4"
futures = "0.3"

